# DeepChiptune

./: README.md  pyproject.toml  requirements.txt  setup.py
data/raw/NES MDB Dataset/: nesmdb_meta.pkl
data/raw/NES MDB Dataset/nesmdb24_blndsco/nesmdb24_blndsco/test/: 002_1943_TheBattleofMidway_00_01Title.blndsco.pkl  002_1943_TheBattleofMidway_01_02PowerUpYourP38.blndsco.pkl  002_1943_TheBattleofMidway_02_03MissionStart.blndsco.pkl  002_1943_TheBattleofMidway_03_04AirBattleA.blndsco.pkl  002_1943_TheBattleofMidway_04_05AntishipBattleA.blndsco.pkl  002_1943_TheBattleofMidway_05_06MissionCompletedI.blndsco.pkl  002_1943_TheBattleofMidway_06_07FailedintheAttack.blndsco.pkl  002_1943_TheBattleofMidway_07_08AirBattleC.blndsco.pkl  002_1943_TheBattleofMidway_08_09AntishipBattleC.blndsco.pkl  002_1943_TheBattleofMidway_09_10AirBattleD.blndsco.pkl  002_1943_TheBattleofMidway_10_11Daihiryu.blndsco.pkl  002_1943_TheBattleofMidway_11_12Ayako.blndsco.pkl  002_1943_TheBattleofMidway_12_13AttackTarget.blndsco.pkl  002_1943_TheBattleofMidway_13_14Ending.blndsco.pkl  002_1943_TheBattleofMidway_14_15EnergyEmpty.blndsco.pkl  002_1943_TheBattleofMidway_15_16GameOver.blndsco.pkl  013_AlterEgo_00_01Title.blndsco.pkl  013_AlterEgo_01_02Level1.blndsco.pkl  013_AlterEgo_02_03Level2.blndsco.pkl  013_AlterEgo_03_04Level2Alternate.blndsco.pkl  013_AlterEgo_04_05Level3.blndsco.pkl  013_AlterEgo_05_06Level4.blndsco.pkl  013_AlterEgo_06_07Level5.blndsco.pkl  013_AlterEgo_07_08Congratulations.blndsco.pkl  013_AlterEgo_08_09GameOver.blndsco.pkl  (+345 more)
src/data/: make_dataset.py
(+10168 files in other folders)
