[tool.poetry]
name = "deepchiptune"
version = "0.1.0"
description = ""
authors = ["Germano Caberlan Smaniotto <germsmaniotto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
